force-app/main/default/objects/MQL__c/MQL__c.object-meta.xml
<CustomObject>
    <description>Marketing Qualified Lead</description>
    <label>MQL</label>
    <nameField>
        <displayFormat>MQL-{0000000}</displayFormat>
        <label>MQL Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MQLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>