force-app/main/default/objects/MQL__c/fields/Contact_Us__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Us</label>
    <referenceTo>Contact_Us__c</referenceTo>
    <relationshipLabel>MQLs</relationshipLabel>
    <relationshipName>MQLs</relationshipName>
    <type>Lookup</type>
</CustomField>