force-app/main/default/objects/MQL__c/fields/Engagement_AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>Engagement_AI_Summary__c</fullName>
    <label>Engagement AI Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>