force-app/main/default/objects/MQL__c/fields/Initial_MQL_Alert_Send__c.field-meta.xml
<CustomField>
    <fullName>Initial_MQL_Alert_Send__c</fullName>
    <label>Initial MQL Alert Send</label>
    <type>DateTime</type>
</CustomField>