force-app/main/default/objects/MQL__c/fields/Lead_Detail_1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Detail_1__c</fullName>
    <label>Lead Detail 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>