force-app/main/default/objects/MQL__c/fields/Lead_Detail_2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Detail_2__c</fullName>
    <label>Lead Detail 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>