force-app/main/default/objects/MQL__c/fields/Lead_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notes__c</fullName>
    <label>Lead Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>