force-app/main/default/objects/MQL__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted a Form</fullName>
            </value>
            <value>
                <fullName>Events Portal</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Registered for a Webinar</fullName>
            </value>
            <value>
                <fullName>Registered for an Event</fullName>
            </value>
            <value>
                <fullName>Manual Marketing Review</fullName>
            </value>
            <value>
                <fullName>Fit and Behavior Threshold Reached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>