force-app/main/default/objects/MQL__c/fields/MQL_Name__c.field-meta.xml
<CustomField>
    <fullName>MQL_Name__c</fullName>
    <label>MQL Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>