force-app/main/default/objects/MQL__c/fields/MQL_Owner__c.field-meta.xml
<CustomField>
    <fullName>MQL_Owner__c</fullName>
    <formula
  >Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL Owner</label>
    <type>Text</type>
</CustomField>