force-app/main/default/objects/MQL__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>MQLs</relationshipLabel>
    <relationshipName>MQLs</relationshipName>
    <type>Lookup</type>
</CustomField>