force-app/main/default/objects/MQL__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Rejection_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product in Active Opportunity</fullName>
            </value>
            <value>
                <fullName>Product in recent Closed Opportunity</fullName>
            </value>
            <value>
                <fullName>Not ready for Sales Engagement</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Not a customer</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>