force-app/main/default/objects/MQL__c/fields/Rejection_Type__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Type__c</fullName>
    <label>Rejection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recycle</fullName>
            </value>
            <value>
                <fullName>Disqualify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>