force-app/main/default/objects/MQL__c/fields/Subscription_Memberships_All_Time__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Memberships_All_Time__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic--staging.sandbox.lightning.force.com/lightning/r/Report/00OVE000006wMsm2AE/view?fv0=&quot; &amp; Contact__r.AccountId, &quot;All&quot;) &amp; &quot; | &quot; &amp;
HYPERLINK(&quot;https://erepublic--staging.sandbox.lightning.force.com/lightning/r/Report/00O1O000009F7xP/view?fv0=&quot; &amp; Contact__r.AccountId, &quot;Navigator&quot;) &amp; &quot; | &quot; &amp;
HYPERLINK(&quot;https://erepublic--staging.sandbox.lightning.force.com/lightning/r/Report/00O5Y00000D6c0RUAR/view?fv0=&quot; &amp; Contact__r.AccountId, &quot;Insider&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Memberships - All Time</label>
    <type>Text</type>
</CustomField>