force-app/main/default/objects/MQL__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MQL_Date__c</columns>
    <columns>MQL_Status__c</columns>
    <columns>NAME</columns>
    <columns>MQL_Owner__c</columns>
    <columns>Contact__c</columns>
    <columns>MQL_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Conversion_Type__c</columns>
    <columns>Rejection_Type__c</columns>
    <columns>Rejection_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All MQLs</label>
</ListView>