force-app/main/default/objects/MQL__c/listViews/MQL_Queue_Hand_Raisers.listView-meta.xml
<ListView>
    <fullName>MQL_Queue_Hand_Raisers</fullName>
    <columns>MQL_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>MQL_Name__c</columns>
    <columns>Campaign__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Lead_Source_Detail__c</columns>
    <columns>Lead_Detail_1__c</columns>
    <columns>Lead_Detail_2__c</columns>
    <columns>Lead_Detail_3__c</columns>
    <columns>Lead_Detail_4__c</columns>
    <columns>Lead_Notes__c</columns>
    <columns>Subscription_Memberships_All_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MQL_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Lead_Source__c</field>
        <operation>equals</operation>
        <value
    >Submitted a Form,Events Portal,Email,Registered for a Webinar,Registered for an Event</value>
    </filters>
    <label>MQL Queue - Hand Raisers</label>
</ListView>