force-app/main/default/objects/MQL__c/listViews/MQL_Queue_Threshold_Met_Engaged.listView-meta.xml
<ListView>
    <fullName>MQL_Queue_Threshold_Met_Engaged</fullName>
    <columns>NAME</columns>
    <columns>MQL_Date__c</columns>
    <columns>Contact__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Campaign__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Lead_Detail_1__c</columns>
    <columns>Lead_Detail_2__c</columns>
    <columns>Lead_Detail_3__c</columns>
    <columns>Lead_Detail_4__c</columns>
    <columns>Lead_Notes__c</columns>
    <columns>Lead_Source_Detail__c</columns>
    <columns>Engagement_AI_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MQL_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Lead_Source__c</field>
        <operation>equals</operation>
        <value
    >Manual Marketing Review,Fit and Behavior Threshold Reached</value>
    </filters>
    <label>MQL Queue - Threshold Met / Marketing</label>
</ListView>